# NB-LDPC-toolbox

./: .gitignore  LICENSE  LICENSE.md  README.md  alist2matrix_nb.m  show_matrix.m
C/: CMakeLists.txt  main.c
C/sources/: nb_ldpc_toolbox.c  nb_ldpc_toolbox.h  struct.h
MATLAB_Octave/functions/: alist2matrix_nb.m  buildGF.m  buildgf.m  dec2gf.m  divgf_dec.m  divgf_gf.m  exportgf.m  gf2dec.m  loadalist_nb.m  matrix2alist_nb.m  multgf_dec.m  multgf_gf.m  multgf_gf.m~  shannon.m
MATLAB_Octave/legacy_scripts/: DVB_T2_QAM.m  build_GF.m  matrix2alist_nb.m
nb_ldpc_c_toolbox/: .clang-format  CMakeLists.txt  cmake_format_conf.py
nb_ldpc_c_toolbox/data/: alist_60_40_64.ubs
nb_ldpc_c_toolbox/sources/: main.c  nb_ldpc_toolbox.c  nb_ldpc_toolbox.h  struct.h
nb_ldpc_mat_toolbox/functions/: DVB_T2_QAM.m  alist2matrix_nb.m  alist_60_40_64.txt  buildgf.m  dec2gf.m  divgf_dec.m  divgf_gf.m  gf2dec.m  matrix2alist_nb.m  multgf_gf.m  show_matrix.m
